# SmallRenderer

./: CMakeLists.txt  README.md  configure.sh  dev_conf.sh
src/: main.c  main.cpp
